<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navGame"
        android:title="@string/nav_game_title"
        android:icon="@drawable/ic_videogame_asset_black_24dp"/>
    <item
        android:id="@+id/navList"
        android:title="@string/nav_list_title"
        android:icon="@drawable/ic_list_black_24dp"/>

    <item
        android:id="@+id/navCategoryList"
        android:title="@string/nav_category_list_title"
        android:icon="@drawable/ic_list_black_24dp"/>

    <item
        android:id="@+id/newFlashcard"
        android:title="@string/nav_new_flashcard_title"
        android:icon="@drawable/ic_fiber_new_black_24dp"/>
    <item
        android:id="@+id/downloadFlashcardsList"
        android:title="@string/nav_download_flashcards_title"
        android:icon="@drawable/ic_cloud_download_black_24dp"/>
...
