<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="@dimen/flashcard_list_view_padding"
    tools:context="com.gregspitz.flashcardappkotlin.flashcardlist.FlashcardListFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/flashcardRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingEnd="2dp"
        android:paddingStart="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailPager">

    </android.support.v7.widget.RecyclerView>
    <android.support.v4.view.ViewPager
        android:id="@+id/detailPager"
        android:layout_width="0dp"
        android:layout_height="187dp"
        android:padding="4dp" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </android.support.v4.view.ViewPager>
</android.support.constraint.ConstraintLayout>
