<resources>
    <string name="app_name">Flashcards</string>
    <string name="failed_to_load_flashcard_text">Failed to load flashcard</string>
    <string name="edit_flashcard_button_text">Edit</string>
    <string name="flashcard_back_hint_text">Back</string>
    <string name="flashcard_front_hint_text">Front</string>
    <string name="save_flashcard_button_text">Save</string>
    <string name="flashcard_list_button_text">Flashcard List</string>
    <string name="no_flashcards_to_show_text">No flashcards to show</string>
    <string name="flashcard_game_button_text">Flashcard Game</string>
    <string name="next_flashcard_button_text">Next Flashcard</string>
    <string name="show_flashcard_list_button_text">Show List</string>
    <string name="save_successful_message_text">Save Successful</string>
    <string name="save_failed_message_text">Save Failed!</string>
    <string name="nav_game_title">Play Game</string>
    <string name="nav_list_title">All Flashcards</string>
    <string name="nav_new_flashcard_title">New Flashcard</string>
    <string name="flashcard_category_hint_text">Category</string>
    <string name="delete_flashcard_button_text">Delete</string>
    <string name="delete_failed_message_text">Delete failed!</string>
    <string name="confirm_delete_title_text">Delete Flashcard?</string>
    <string name="confirm_delete_message_text">Are you sure you want to delete this flashcard?
    </string>
    <string name="failed_to_load_download_categories_text">Could not load categories!</string>
    <string name="download_flashcards_button_text">Download</string>
    <string name="action_one_selected">Category selected</string>
    <string name="action_many_selected">Categories selected</string>
    <string name="download_flashcards_successful">Download successful!</string>
    <string name="download_flashcards_failed">Download failed!</string>
    <string name="nav_download_flashcards_title">Download flashcards</string>
    <string name="download_requires_sign_in_message">Download requires Google sign-in. Would you
        like to sign in?
    </string>
    <string name="sign_in_dialog_title">Please Sign In</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="sign_in_failed_text">Sign-in failed!</string>
    <string name="flashcard_priority_urgent_button_text">Very Poorly</string>
    <string name="flashcard_priority_low_button_text">Very Well</string>
    <string name="flashcard_priority_medium_button_text">Well</string>
    <string name="flashcard_priority_high_button_text">Poorly</string>
    <string name="flashcard_priority_question_text">How well do you feel you knew this card?
    </string>
    <string name="user_profile_image_content_description">User Profile Image</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="no_categories_to_show_text">No categories to show</string>
    <string name="failed_to_load_categories_text">Failed to load categories</string>
    <string name="nav_category_list_title">Categories</string>
    <string name="delete_flashcards_button_title">Delete flashcards</string>
    <string name="delete_succeeded_message_text">Delete Succeeded!</string>
    <string name="confirm_delete_multiple_title_text">Delete multiple flashcards?</string>
    <string name="confirm_delete_all_flashcards_text">Are you sure you want to delete all
        flashcards?
    </string>
    <string name="confirm_delete_flashcards_from_category_text">Are you sure you want to delete all
        flashcards from %s?
    </string>
    <string name="all_flashcards_spinner_text">All</string>
    <string name="play_button_title">Play</string>
    <string name="flashcard_must_have_category_message_text">Flashcard must have a category</string>
    <string name="flashcard_must_have_front_message_text">Flashcard must have a front</string>
    <string name="flashcard_must_have_back_message_text">Flashcard must have a back</string>
    <string name="discard_changes_title_text">Discard Changes?</string>
    <string name="discard_changes_message_text">You have unsaved changes. Are you sure you want to
        discard them?
    </string>
</resources>
