<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/downloadFlashcardsButton"
          android:title="@string/download_flashcards_button_text"
          android:icon="@drawable/ic_cloud_download_black_24dp"
          app:showAsAction="always"/>
</menu>
